Deploy-ready for Vercel (keep all files)

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,4 @@
 {
-    "version": 2,
-    "routes": [
-        { "src": "/", "dest": "/Quiz.html" }
-    ]
+  "cleanUrls": true,
+  "trailingSlash": false
 }
